# api/routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ProfileController;
 use App\Http\Controllers\SlotController;
 use App\Http\Controllers\ReservationSlotController;
+use App\Http\Controllers\UserController;
 
 Route::get('/profile', [ProfileController::class, 'profile'])->middleware('auth');
 Route::get('/slots', [SlotController::class, 'list'])->middleware('auth');
@@ -12,3 +13,5 @@ Route::post('/slots/{slotId}/reserve', [ReservationSlotController::class, 'reser
 Route::put('/slots/{slotId}/cancel', [ReservationSlotController::class, 'cancelReservation'])->middleware('role:student');
 Route::post('/slots/{slotId}/reserve-for/{userId}', [ReservationSlotController::class, 'reserveSlotForUser'])->middleware('role:admin');
 Route::put('/slots/{slotId}/cancel-for/{userId}', [ReservationSlotController::class, 'cancelReservationForUser'])->middleware('role:admin');
+
+Route::get('/users', [UserController::class, 'list'])->middleware('role:admin');
